Fix panorama and browser bar style

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,10 @@
     overflow-x:scroll;
     overflow-y:hidden;
     height:170px;
-    background:#000;
+    background:rgba(0,0,0,0.85);
+    position: absolute;
+    z-index:10;
+    width:100%;
   }
   #browser-elem {
     width: max-content;
@@ -49,6 +52,8 @@
   #viewer {
     width: 100vw;
     height: 100vh;
+    position: absolute;
+    z-index:5;
   }
 </style>
 
